beefed up the node resolution

--- a/visualization/usubjid/index.html
+++ b/visualization/usubjid/index.html
@@ -15,7 +15,7 @@
                 /* .jsonUrl('../datasets/miserables.json') */
         .nodeLabel('name')
         .nodeVal('value')
-
+        .nodeResolution('20')
         .nodeColor(d => {
           if (d.type === 'pred') {
             return '#c7c7c7';  /* gray */
