adding report to to vis

--- a/visualization/DRSI/RayDemogAndSHACLResult.html
+++ b/visualization/DRSI/RayDemogAndSHACLResult.html
@@ -66,6 +66,13 @@
             return '#467065';  /* green-cyan  */
           }
 
+          else if (d.type === "result") 
+          {
+            return '#6DB880';  /* green-cyan  */
+          }
+
+
+
 
           else if (d.type === 'shapeMessage') {
              return 'DEC08B';  /* light orange brown */
@@ -108,6 +115,11 @@
           else if (d.type === 'linkShape') {
              return '#467065';  /* green-cyan */
           }
+
+          else if (d.type === 'linkAttach') {
+             return '#FFFF00';  /* yellow */
+          }
+
 
 
 //--- OLDE BELOW HERE ---------------------------------
